--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.7"
+  },
+  "devDependencies": {
+    "@ckeditor/ckeditor5-inspector": "^1.3.0"
   }
 }
